--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/mainscreen_background"
@@ -14,16 +15,18 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="536dp">
 
             <TextView
                 android:id="@+id/splash_screen_appname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="112dp"
                 android:text="@string/app_name"
                 android:textAllCaps="true"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,27 +56,19 @@
                 app:layout_constraintStart_toStartOf="@+id/splash_screen_login"
                 app:layout_constraintTop_toBottomOf="@+id/splash_screen_login" />
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="5dp"
-                android:text="@string/guest_text"
-                app:layout_constraintEnd_toEndOf="@+id/splash_screen_signin"
-                app:layout_constraintStart_toStartOf="@+id/splash_screen_signin"
-                app:layout_constraintTop_toBottomOf="@+id/splash_screen_signin" />
-
             <Button
                 android:id="@+id/guest_button"
-                style="@style/Widget.Material3.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="20dp"
-                android:text="@string/guest_button"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="@+id/textView"
-                app:layout_constraintStart_toStartOf="@+id/textView"
-                app:layout_constraintTop_toTopOf="@+id/textView" />
+                style="@style/Widget.Material3.Button"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="240dp"
+                android:elevation="8dp"
+                android:text="Guest"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                app:layout_constraintEnd_toEndOf="@+id/splash_screen_login"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/splash_screen_login"
+                app:layout_constraintTop_toBottomOf="@+id/splash_screen_login" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
