--- a/app/src/main/res/layout/list_item_allergies.xml
+++ b/app/src/main/res/layout/list_item_allergies.xml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_constraintStart_toStartOf="parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:stretchColumns="*"
     app:layout_constraintEnd_toEndOf="parent"
-    android:stretchColumns="*">
-<TableRow
-    android:id="@+id/alergy_row"
-    android:layout_marginVertical="5dp">
+    app:layout_constraintStart_toStartOf="parent">
+
+    <TableRow
+        android:id="@+id/alergy_row"
+        android:layout_marginVertical="5dp">
+
         <TextView
-            android:layout_width="0dip"
-            android:layout_weight="1"
-            android:layout_column="0"
             android:id="@+id/alergy_text"
-            android:textSize="18dp"/>
-        <TextView
             android:layout_width="0dip"
+            android:layout_column="0"
             android:layout_weight="1"
-            android:layout_column="1"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:paddingLeft="10dp"
+            android:textSize="18dp" />
+
+        <TextView
             android:id="@+id/alergy_type"
-            android:textSize="18dp"/>
+            android:layout_width="0dip"
+            android:layout_column="1"
+            android:layout_weight="1"
+            android:paddingLeft="10dp"
+            android:textSize="18dp"
+            app:layout_constraintEnd_toEndOf="parent" />
     </TableRow>
 </TableLayout>
