Editing, displaying and deleting allergies and diseases details

--- a/app/src/main/res/layout/list_item_allergies.xml
+++ b/app/src/main/res/layout/list_item_allergies.xml
@@ -1,31 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:stretchColumns="*"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TableRow
-        android:id="@+id/alergy_row"
-        android:layout_marginVertical="5dp">
+    <data>
 
-        <TextView
-            android:id="@+id/alergy_text"
-            android:layout_width="0dip"
-            android:layout_column="0"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:textSize="18dp" />
+        <variable
+            name="allergy"
+            type="com.example.mobileclient.model.Allergy" />
+    </data>
 
-        <TextView
-            android:id="@+id/alergy_type"
-            android:layout_width="0dip"
-            android:layout_column="1"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:textSize="18dp"
-            app:layout_constraintEnd_toEndOf="parent" />
-    </TableRow>
-</TableLayout>
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:stretchColumns="*"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TableRow
+            android:id="@+id/alergy_row"
+            android:layout_marginVertical="5dp">
+
+            <TextView
+                android:id="@+id/alergy_text"
+                android:layout_width="0dip"
+                android:layout_column="0"
+                android:layout_weight="1"
+                android:paddingLeft="10dp"
+                android:text="@{allergy.allergyName}"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/alergy_type"
+                android:layout_width="0dip"
+                android:layout_column="1"
+                android:layout_weight="1"
+                android:paddingLeft="10dp"
+                android:text="@{allergy.allergyType}"
+                android:textSize="18dp"
+                app:layout_constraintEnd_toEndOf="parent" />
+        </TableRow>
+    </TableLayout>
+</layout>
