--- a/app/src/main/res/layout/list_item_diseases.xml
+++ b/app/src/main/res/layout/list_item_diseases.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shrinkColumns="*"
-    android:stretchColumns="*">
-    <TableRow
-        android:id="@+id/alergy_row"
-        android:layout_margin="10dp">
-        <TextView
-            android:layout_column="0"
-            android:id="@+id/disease_name"
-            android:textSize="18sp"/>
-    </TableRow>
-</TableLayout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+
+        <variable
+            name="disease"
+            type="com.example.mobileclient.model.Disease" />
+    </data>
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:shrinkColumns="*"
+        android:stretchColumns="*">
+
+        <TableRow
+            android:id="@+id/disease_row"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:id="@+id/disease_name"
+                android:layout_column="0"
+                android:text="@{disease.diseaseName}"
+                android:textSize="18sp" />
+        </TableRow>
+    </TableLayout>
+</layout>
