--- a/app/src/main/res/menu/bottom_paramedic_navigation.xml
+++ b/app/src/main/res/menu/bottom_paramedic_navigation.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/Map"
-        android:title="Map"
+        android:title="@string/ParamedicNavigation_Map"
         android:enabled="true"
         android:icon="@drawable/ic_map_24"/>
     <item
