--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="medicalInfoArray" >
-        <item name="Blood Type">Blood Type</item>
-        <item name="Allergy">Allergy</item>
-        <item name="Disease">Disease</item>
+        <item name="Blood Type">@string/bloodType</item>
+        <item name="Allergy">@string/allergy</item>
+        <item name="Disease">@string/disease</item>
     </string-array>
 </resources>
