added pl language

--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -33,7 +33,7 @@
             <Button
                 android:id="@+id/splash_screen_login"
                 style="@style/Widget.Material3.Button"
-                android:layout_width="130dp"
+                android:layout_width="175dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 android:elevation="8dp"
@@ -46,8 +46,8 @@
             <Button
                 android:id="@+id/splash_screen_signin"
                 style="@style/Widget.Material3.Button"
-                android:layout_width="130dp"
-                android:layout_height="50dp"
+                android:layout_width="172dp"
+                android:layout_height="51dp"
                 android:layout_marginTop="10dp"
                 android:elevation="8dp"
                 android:text="@string/sign_up"
@@ -59,11 +59,11 @@
             <Button
                 android:id="@+id/guest_button"
                 style="@style/Widget.Material3.Button"
-                android:layout_width="130dp"
-                android:layout_height="50dp"
+                android:layout_width="178dp"
+                android:layout_height="49dp"
                 android:layout_marginTop="240dp"
                 android:elevation="8dp"
-                android:text="Guest"
+                android:text="@string/guest"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                 app:layout_constraintEnd_toEndOf="@+id/splash_screen_login"
                 app:layout_constraintHorizontal_bias="0.0"
