--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,5 +4,6 @@
         <item name="Blood Type">Blood Type</item>
         <item name="Allergy">Allergy</item>
         <item name="Disease">Disease</item>
+        <item name="TrustedPerson">Trusted Person</item>
     </string-array>
 </resources>
