--- a/app/src/main/res/layout/fragment_facilities_map.xml
+++ b/app/src/main/res/layout/fragment_facilities_map.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,10 +9,60 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <org.osmdroid.views.MapView
+            android:id="@+id/map"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/map"/>
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/facilities_headline"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:text="This is a map of facilities near you"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <CheckBox
+            android:id="@+id/hospital_checkbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:drawableStart="@drawable/ic_baseline_local_hospital_40"
+            android:padding="5dp"
+            android:text="Hospital"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toStartOf="@id/police_checkbox"
+            app:layout_constraintTop_toBottomOf="@id/facilities_headline" />
+
+        <CheckBox
+            android:id="@+id/police_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:drawableStart="@drawable/ic_baseline_local_police_40"
+            android:padding="5dp"
+            android:text="Police"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/facilities_headline" />
+
+        <CheckBox
+            android:id="@+id/fire_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:drawableStart="@drawable/ic_baseline_local_fire_department_40"
+            android:padding="5dp"
+            android:text="Fire"
+            android:textSize="15sp"
+            app:layout_constraintStart_toEndOf="@id/police_checkbox"
+            app:layout_constraintTop_toBottomOf="@id/facilities_headline" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
